[tool.poetry]
name = "ppt"
version = "0.1.0"
description = ""
authors = ["xichaoli <xichaoli@sina.cn>"]
readme = "README.md"
packages = [{include = "ppt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
